--- a/datax-admin/src/main/resources/application.yml
+++ b/datax-admin/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
   datasource:
     username: root
     password: 123456
-    url: jdbc:mysql://10.42.7.72:3306/datax-web?serverTimezone=Asia/Shanghai&useLegacyDatetimeCode=false&useSSL=false&nullNamePatternMatchesAll=true&useUnicode=true&characterEncoding=UTF-8
+    url: jdbc:mysql://x.x.x.x:x/datax-web?serverTimezone=Asia/Shanghai&useLegacyDatetimeCode=false&useSSL=false&nullNamePatternMatchesAll=true&useUnicode=true&characterEncoding=UTF-8
 #    password: ${DB_PASSWORD:root}
 #    username: ${DB_USERNAME:123456}
 #    url: jdbc:mysql://${DB_HOST:127.0.0.1}:${DB_PORT:3306}/${DB_DATABASE:datax-web}?serverTimezone=Asia/Shanghai&useLegacyDatetimeCode=false&useSSL=false&nullNamePatternMatchesAll=true&useUnicode=true&characterEncoding=UTF-8
@@ -30,8 +30,8 @@ spring:
   mail:
     host: smtp.qq.com
     port: 25
-    username: 1414741872@qq.com
-    password: sxkbsqj24jyjy
+    username: xxx@qq.com
+    password: xxx
 #    username: ${mail.username}
 #    password: ${mail.password}
     properties:
